<resources>
    <string name="app_name">Winged Feet</string>

    <string name="toolbar_logout">Logout</string>

    <!--    Login Fragment    -->
    <string name="please_login_to_your_account">Please, login to your account</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="button_login">login</string>
    <string name="create_a_new_login">Create a new login</string>

    <!--    Welcome Fragment    -->
    <string name="about_winged_feet">About Winged Feet</string>
    <string name="about_text">Winged Feet leads the celebration of sneaker and youth culture around the globe through a portfolio of brands. Present in 32 countries across around the world, as well as websites and mobile apps, its purpose is to inspire and empower youth culture around the world, by fueling a shared passion for self-expression and creating unrivaled experiences.</string>
    <string name="about_rights">© Copyrights warning: All texts and descriptions in this app have been retrieved from the FootLocker official website.</string>

    <!--    Instructions Fragment    -->
    <string name="instructions">Instructions</string>
    <string name="instructions_text">In the next screen, you will see a list of shoes you may choose from.</string>
    <string name="instructions_go_to_list_button">go to shoes list</string>

    <!--    ShoeList Fragment    -->
    <string name="our_shoes">Our Shoes</string>
    <string name="shoe_size_label">Shoe Size</string>

    <!--    NewShoe Fragment    -->
    <string name="description">Description:</string>
    <string name="newShoe_cancel">Cancel</string>
    <string name="newShoe_add_new_shoe_button">Add new shoe</string>

    <!--    Accessibility    -->
    <string name="accessibility_login_image">Winged Feet shoe store</string>
    <string name="accessibility_login_email">email</string>
    <string name="accessibility_login_password">password</string>
    <string name="accessibility_winged_feet_logo">Winged Feet logo</string>
    <string name="accessibility_see_details_about_the_shoe">See details about the shoe</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_new_shoe_to_the_inventory">Add a new shoe to the inventory</string>
    <string name="newShoe_company">Company</string>
    <string name="accessibility_newshoe_company">Company name</string>
    <string name="accessibility_newshoe_name">Shoe model</string>
    <string name="newShoe_name">Model</string>
    <string name="newShoe_shoe_size">Shoe size</string>
    <string name="accessibility_shoe_size">Shoe size</string>
    <string name="accessibility_shoe_description">Shoe Description</string>

</resources>
